--- a/SDRVoiceKeyer/Storyboards/Base.lproj/Main.storyboard
+++ b/SDRVoiceKeyer/Storyboards/Base.lproj/Main.storyboard
@@ -1186,7 +1186,7 @@ Gw
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                 </tableColumn>
                                                 <tableColumn identifier="ipAddress" width="93" minWidth="10" maxWidth="3.4028234663852886e+38" id="Psj-A1-taV">
-                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="IP Address">
+                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Station">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
